libsoup (2.2.102-1) UNRELEASED; urgency=low

  * New upstream release; no API change; fixes non-SSL build, Debian not
    affected.

 -- Loic Minier <lool@dooz.org>  Fri, 19 Oct 2007 11:29:02 +0200

libsoup (2.2.101-1) unstable; urgency=low

  [ Loic Minier ]
  * Drop useless upstream version computation.
  * Use full URL in copyright.
  * Don't include autotools.mk as it's already included by gnome.mk.

  [ Sebastian Dröge ]
  * New upstream release with no API changes:
    + debian/control.in:
      - Build depend on libglib2.0-dev (>= 2.12.0).

 -- Sebastian Dröge <slomo@debian.org>  Mon, 08 Oct 2007 08:15:12 +0200

libsoup (2.2.100-1) unstable; urgency=medium

  * Add a get-orig-source target to retrieve the upstream tarball.
  * New upstream stable release; bug fixes.
    - Fix handling of NUL terminated status lines; GNOME #406997;
      closes: #410638.

 -- Loic Minier <lool@dooz.org>  Mon, 12 Feb 2007 16:59:55 +0100

libsoup (2.2.99-1) unstable; urgency=low

  * New upstream stable release; no API nor ABI change; stricter header
    parsing and testsuite, plug for a small memory leak, bug fix, doc fix.
    - Do not use the upstream version for shlibs, set them to >= 2.2.98.
    - Drop patch 01_parse_headers_DoS, fixed differently upstream.

 -- Loic Minier <lool@dooz.org>  Tue,  9 Jan 2007 09:23:51 +0100

libsoup (2.2.98-2) unstable; urgency=high

  * 01_parse_headers_DoS.patch: new patch, fixes a remote denial of 
    service vulnerability in rhythmbox - and probably anything using 
    libsoup's HTTP server code. Closes: #405197.

 -- Josselin Mouette <joss@debian.org>  Tue,  2 Jan 2007 18:42:12 +0100

libsoup (2.2.98-1) unstable; urgency=low

  * New upstream stable release; no API change; XML-RPC minor syntax support
    addition, memory leak fix, cleanups.

 -- Loic Minier <lool@dooz.org>  Tue, 21 Nov 2006 10:50:41 +0100

libsoup (2.2.97-1) unstable; urgency=low

  * Set Maintainer to the Debian GNOME team.