@@ -3,14 +3,26 @@ Section: devel
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: Josselin Mouette <joss@debian.org>, Loic Minier <lool@dooz.org>, Sebastian Dröge <slomo@debian.org>
-Build-Depends: debhelper (>= 5), libglib2.0-dev (>= 2.12.0), libgnutls-dev (>= 1.4.0), libxml2-dev, cdbs, gtk-doc-tools, gnome-pkg-tools, dpkg-dev (>= 1.13.19)
+Build-Depends: debhelper (>= 5),
+               libglib2.0-dev (>= 2.12.0),
+               libgnutls-dev (>= 1.4.0),
+               libxml2-dev,
+               cdbs,
+               gtk-doc-tools,
+               gnome-pkg-tools,
+               dpkg-dev (>= 1.13.19)
 Build-Conflicts: libgnutls11-dev
 Standards-Version: 3.7.2
 
 Package: libsoup2.2-dev
 Section: devel
 Architecture: any
-Depends: ${misc:Depends}, libsoup2.2-8 (= ${binary:Version}), libglib2.0-dev, libgnutls-dev (>= 1.4.0), libxml2-dev, zlib1g-dev
+Depends: ${misc:Depends},
+         libsoup2.2-8 (= ${binary:Version}),
+         libglib2.0-dev,
+         libgnutls-dev (>= 1.4.0),
+         libxml2-dev,
+         zlib1g-dev
 Conflicts: libgnutls11-dev
 Suggests: libsoup2.2-doc
 Description: an HTTP library implementation in C -- Development files
@@ -38,7 +50,8 @@ Description: an HTTP library implementation in C -- Development files
 Package: libsoup2.2-8
 Section: libs
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends: ${misc:Depends},
+         ${shlibs:Depends}
 Description: an HTTP library implementation in C -- Shared library
  It was originally part of a SOAP (Simple Object Access Protocol)
  implementation called Soup, but the SOAP and non-SOAP parts have now been
@@ -64,7 +77,7 @@ Description: an HTTP library implementation in C -- Shared library
 Package: libsoup2.2-doc
 Section: devel
 Architecture: all
-Depends:  ${misc:Depends}
+Depends: ${misc:Depends}
 Suggests: libsoup2.2-dev
 Description: an HTTP library implementation in C -- API Reference
  It was originally part of a SOAP (Simple Object Access Protocol)
@@ -87,3 +100,4 @@ Description: an HTTP library implementation in C -- API Reference
   * Basic client-side SOAP and XML-RPC support
  .
  This package contains the documentation.
+
