@@ -2,8 +2,9 @@ libsoup (2.2.102-1) UNRELEASED; urgency=low
 
   * New upstream release; no API change; fixes non-SSL build, Debian not
     affected.
+  * Wrap build-deps and deps.
 
- -- Loic Minier <lool@dooz.org>  Fri, 19 Oct 2007 11:29:02 +0200
+ -- Loic Minier <lool@dooz.org>  Fri, 19 Oct 2007 11:37:35 +0200
 
 libsoup (2.2.101-1) unstable; urgency=low
 
